# BE---Advance-Python---L3

./: DEPLOYMENT.md  Dockerfile  README.md  async_demo.py  cprofile_output.prof  cprofile_output.txt  flamegraph_memray.html  memory_flamegraph_fixed.html  memray-table-memory_large.html  profile.out  profile.prof  profile_analyzer.py  pyproject.toml  requirements.txt  urls.json  urls_large.json
src/webperf/: __init__.py  analyzer.py  cli.py  io_utils.py  stats.py
tests/: test_analyzer.py  test_io_utils.py
