[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "webperf"
version = "0.1.0"
description = "Async Web Performance Analyzer"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
keywords = ["async", "web", "performance", "analyzer", "aiohttp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "flake8>=6.0",
    "memray>=1.0",
    "py-spy>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
webperf = "webperf.cli:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[tool.pytest.ini_options]
minversion = "6.0"